# vsg

./: Cargo.toml
shaders/: shader.wgsl
src/: lib.rs  main.rs  projection.rs  resources.rs  texture.rs  vertex.rs
src/stim/: grating.rs  grating.wgsl  mod.rs  picture.rs  picture.wgsl  rdk.rs  rdk.wgsl  rect.rs  rect.wgsl
