[package]
name = "vsg"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
bytemuck = { version = "1.4", features = [ "derive" ] }
env_logger = "0.9"
winit = "0.26"
pollster = "0.2"
log = "0.4"
image = "0.24"
wgpu = "0.13"
cgmath = "0.18"
imgui = "0.8"
imgui-wgpu = "0.20.0"
imgui-winit-support = { version = "0.8", default-features = false, features = ["winit-26"] }

[build-dependencies]
fs_extra = "1.2"